fix dependency sorting